bk_ida/gobmkida/g0/sgfAddPlayLast
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlayLast/src/sgf/sgfnode.c:928:6: error: use of undeclared identifier 'off_58C41A'
v4 = off_58C41A; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlayLast/src/sgf/sgfnode.c:930:6: error: use of undeclared identifier 'off_58C41A'
v4 = off_58C41A + 2; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgfAddPlayLast/src/obj/4/sgfnode.o] Error 1
